tests/outref/TDTT057.ref

create table TDTT057 (dob varchar zut);
create table TDTT057 (dob date(zut) zhorolog);
create table TDTT057 (dob date(zut zut) zut);
select 'text' zut;
create function TDTT057_func(varchar(zut)) RETURNS VARCHAR as $$^extrinsic;
create function TDTT057_func(varchar zut zut) RETURNS VARCHAR as $$^extrinsic;
create function TDTT057_func(DATE) RETURNS VARCHAR(zut) as $$^extrinsic;
create function TDTT057_func(DATE) RETURNS VARCHAR zut zut as $$^extrinsic;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected DATE_TIME_ZUT
LINE 2:1: create table TDTT057 (dob varchar zut);
                                            ^^^
OCTO> create table TDTT057 (dob varchar zut);
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected DATE_TIME_ZHOROLOG
LINE 3:1: create table TDTT057 (dob date(zut) zhorolog);
                                              ^^^^^^^^
OCTO> create table TDTT057 (dob date(zut) zhorolog);
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected DATE_TIME_ZUT, expecting RIGHT_PAREN
LINE 4:1: create table TDTT057 (dob date(zut zut) zut);
                                             ^^^
OCTO> create table TDTT057 (dob date(zut zut) zut);
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected DATE_TIME_ZUT, expecting EXCEPT or UNION or SEMICOLON or ENDOFFILE
LINE 5:1: select 'text' zut;
                        ^^^
OCTO> select 'text' zut;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected DATE_TIME_ZUT, expecting DATE or TIME or TIMESTAMP or LITERAL
LINE 6:1: ...function TDTT057_func(varchar(zut)) RETURNS VARCHAR as $$^extri...
                                           ^^^
OCTO> create function TDTT057_func(varchar(zut)) RETURNS VARCHAR as $$^extrinsic;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected DATE_TIME_ZUT, expecting RIGHT_PAREN
LINE 7:1: ...function TDTT057_func(varchar zut zut) RETURNS VARCHAR as $$^ex...
                                           ^^^
OCTO> create function TDTT057_func(varchar zut zut) RETURNS VARCHAR as $$^extrinsic;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected DATE_TIME_ZUT, expecting DATE or TIME or TIMESTAMP or LITERAL
LINE 8:1: ...nction TDTT057_func(DATE) RETURNS VARCHAR(zut) as $$^extrinsic;
                                                       ^^^
OCTO> create function TDTT057_func(DATE) RETURNS VARCHAR(zut) as $$^extrinsic;
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected DATE_TIME_ZUT, expecting AS
LINE 9:1: ...ion TDTT057_func(DATE) RETURNS VARCHAR zut zut as $$^extrinsic;
                                                    ^^^
OCTO> create function TDTT057_func(DATE) RETURNS VARCHAR zut zut as $$^extrinsic;
OCTO> 
